tests-integration/fixtures/checking/1772815860_derive_generic_missing_rep/Main.snap
---
source: tests-integration/src/fixtures.rs
assertion_line: 50
expression: report
---
Terms
Box :: Int -> Box

Types
Box :: Type

Derived
derive forall (t :: Type). Generic Box (t :: Type)

Roles
Box = []

Diagnostics
error[CannotDeriveClass]: Cannot derive this class
  --> 7:1..7:30
  |
7 | derive instance Generic Box _
  | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~
